# aho-ai

./: .gitignore  ANALYSIS_README.md  ARCHITECTURE.md  Cargo.toml  DOCS.md  ML_IMPROVEMENT_METHODS.md  ML_README.md  ML_USAGE.md  Mikefile.toml  README.md  VERSIONING.md  ai_config.json  analyze_batch_kifu.py  analyze_kifu.py  analyze_selfplay.py  analyze_winning_patterns.py  ml_prepare_data.py  ml_train_model.py  selfplay_results_20260104_232146.json  test1  training_data.pkl
docs/: ARCHITECTURE.md  INDEX.md  ML_USAGE.md  VERSIONING.md  WINDOWS_GPU_SETUP.md
kifu/: father-game-fair.json  game.json  game2.json
scripts/: README.md  analysis_results.json  analyze_results.json  analyze_results.py  auto_update_config.py  bump_version.py  deep_analysis.py  diagnose_tactics.py  phase1_analyze.py  summary_report.py  test_eval_symmetry.py  visualize_boards.py  visualize_thinking.py
selfplay_kifu/: game_0001_20260104_230913.json  game_0001_20260105_005018.json  game_0001_20260105_005419.json  game_0002_20260104_231214.json  game_0002_20260105_005456.json  game_0002_20260105_010641.json  game_0003_20260104_231736.json  game_0003_20260105_005704.json  game_0003_20260105_011250.json  game_0004_20260104_231924.json  game_0004_20260105_011113.json  game_0004_20260105_011441.json  game_0005_20260104_232146.json  game_0005_20260105_011653.json  game_0005_20260105_011741.json  game_0006_20260105_011838.json  game_0006_20260105_011924.json  game_0007_20260105_012229.json  game_0007_20260105_023741.json  game_0008_20260105_012415.json  game_0009_20260105_012742.json  (+9 more)
src/: lib.rs  (+4 more)
(+64 files in other folders)
