[package]
name = "shogi-aho-ai"
version = "0.6.0"
edition = "2021"
default-run = "shogi-aho-ai"

[lib]
name = "shogi_aho_ai"
path = "src/lib.rs"

[[bin]]
name = "shogi-aho-ai"
path = "src/main.rs"

[[bin]]
name = "extract_features"
path = "src/bin/extract_features.rs"

[dependencies]
rand = "0.8"
anyhow = "1.0"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.42"
once_cell = "1.19"
rayon = "1.10"
ort = { version = "2.0.0-rc.10", optional = true, features = ["directml"] }
ndarray = { version = "0.16", optional = true }

[features]
ml = ["ort", "ndarray"]
